# PyADM1ODE_calibration

./: 404.html  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  changes.diff  cliff.toml  environment.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: auto-version-badges.yml  auto-version-bump.yml  codeql.yml  docs.yaml  docs.yml  lint.yml  release.yml  tests.yml
api/: index.html
api/calibration/: index.html
api/io/: index.html
api/optimization/: index.html
data/: plant_measurements.csv  plant_measurements_csv.md
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api/: index.html
dev/api/calibration/: index.html
dev/api/io/: index.html
dev/api/optimization/: index.html
dev/architecture/: index.html
dev/assets/: metrics.json
dev/configuration/: index.html
dev/development/: index.html
dev/development/changelog/: index.html
dev/development/docstring-guide/: index.html
dev/development/metrics/: index.html
dev/development/versioning/: index.html
dev/en/: index.html
dev/en/api/: index.html
dev/en/api/calibration/: index.html
dev/en/architecture/: index.html
dev/en/configuration/: index.html
dev/en/development/: index.html
dev/en/examples/: index.html
dev/en/getting-started/: index.html
dev/en/installation/: index.html
dev/en/troubleshooting/: index.html
dev/en/tutorials/: index.html
dev/en/usage/: index.html
dev/examples/: index.html
dev/examples/calibration_workflow/: index.html
dev/getting-started/: index.html
dev/installation/: index.html
dev/search/: search_index.json
dev/troubleshooting/: index.html
dev/tutorials/: index.html
dev/tutorials/calibration/: index.html
dev/usage/: index.html
dev/usage/calibration/: index.html
docs/: index.en.md  index.md
docs/api/: calibration.md
docs/de/: configuration.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/de/api/: calibration.md  index.md  io.md  optimization.md
docs/de/architecture/: index.md
docs/de/development/: changelog.md  docstring-guide.md  index.md  metrics.md  versioning.md
docs/de/examples/: calibration_workflow.md  index.md
docs/de/tutorials/: calibration.md  index.md
docs/de/usage/: calibration.md  index.md
docs/en/: configuration.md  getting-started.md  index.md  installation.md  troubleshooting.md
docs/en/api/: calibration.md  index.md  io.md  optimization.md
docs/en/architecture/: index.md
docs/en/development/: changelog.md  docstring-guide.md  index.md  metrics.md  versioning.md
docs/en/examples/: calibration_workflow.md  index.md
docs/en/tutorials/: calibration.md  index.md
docs/en/usage/: calibration.md  index.md
docs/examples/: index.en.md  index.md
docs/user_guide/: calibration.md  index.en.md  index.md
en/: index.html
en/api/: index.html
en/api/calibration/: index.html
en/api/io/: index.html
en/api/optimization/: index.html
en/examples/: index.html
en/examples/calibration_workflow/: index.html
en/user_guide/: index.html
en/user_guide/calibration/: index.html
examples/: calibration_example.py  calibration_workflow_complete.py  index.html
examples/calibration_workflow/: index.html
latest/: 404.html  index.html  objects.inv  sitemap.xml
latest/api/: index.html
latest/api/calibration/: index.html
latest/api/io/: index.html
latest/api/optimization/: index.html
latest/architecture/: index.html
latest/configuration/: index.html
latest/development/: index.html
latest/development/metrics/: index.html
latest/en/: index.html
latest/en/api/: index.html
latest/en/architecture/: index.html
latest/en/configuration/: index.html
latest/en/development/: index.html
latest/en/examples/: index.html
latest/en/getting-started/: index.html
latest/en/installation/: index.html
latest/en/troubleshooting/: index.html
latest/en/usage/: index.html
latest/examples/: index.html
latest/examples/calibration_workflow/: index.html
latest/getting-started/: index.html
latest/installation/: index.html
latest/search/: search_index.json
latest/troubleshooting/: index.html
latest/usage/: index.html
latest/usage/calibration/: index.html
notebooks/: calibration_tutorial.ipynb
pyadm1ode_calibration/: __init__.py  exceptions.py
pyadm1ode_calibration/calibration/: __init__.py  base_calibrator.py  calibrator.py  initial.py  online.py  parameter_bounds.py  validation.py
pyadm1ode_calibration/calibration/analysis/: __init__.py  identifiability.py  sensitivity.py
pyadm1ode_calibration/calibration/core/: __init__.py  base_calibrator.py  result.py  simulator.py
pyadm1ode_calibration/calibration/methods/: __init__.py  initial.py  online.py
pyadm1ode_calibration/calibration/optimization/: __init__.py  constraints.py  objective.py  optimization_refactoring_doc.md  optimizer.py
pyadm1ode_calibration/io/: __init__.py  database.py
pyadm1ode_calibration/io/loaders/: __init__.py  csv_handler.py  measurement_data.py
pyadm1ode_calibration/io/persistence/: __init__.py  connection.py  database.py  models.py  repositories.py
pyadm1ode_calibration/io/validation/: __init__.py  validators.py
scripts/: bump_version.py
search/: search_index.json
src/: __init__.py
src/calibration/: __init__.py  calibrator.py  initial.py  online.py  validation.py
src/calibration/optimization/: __init__.py  optimization_refactoring_doc.md
src/io/: __init__.py  database.py
tests/: __init__.py
tests/integration/: test_calibration_workflow.py  test_minimal.py
tests/unit/: __init__.py  test_full_coverage.py
tests/unit/test_calibration/: __init__.py  test_analysis.py  test_base_calibrator.py  test_initial_calibrator.py  test_measurement_data.py  test_measurement_data_specific.py  test_online_calibrator.py  test_optimization_core.py  test_orchestrator.py  test_parameter_bounds.py  test_simulator.py  test_validation.py
tests/unit/test_io/: __init__.py  test_csv_handler.py  test_database.py  test_repositories.py  test_validators.py
user_guide/: index.html
user_guide/calibration/: index.html
(+15 files in other folders)
