# ============================================================================
# pyproject.toml
# ============================================================================
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyadm1ode_calibration"
version = "0.1.0"
description = "Parameter calibration framework for PyADM1ODE biogas plant models"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Daniel Gaida", email = "daniel.gaida@th-koeln.de"}
]
maintainers = [
    {name = "Daniel Gaida", email = "daniel.gaida@th-koeln.de"}
]
keywords = [
    "ADM1",
    "anaerobic digestion",
    "biogas",
    "calibration",
    "parameter estimation",
    "optimization"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pyadm1 @ git+https://github.com/dgaida/PyADM1ODE.git",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.5.0",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
    "mkdocs-static-i18n>=1.2.0",
    "mkdocs-mermaid2-plugin>=0.6.0",
    "mike>=2.0.0",
    "interrogate>=1.7.0",
]
all = [
    "pyadm1ode_calibration[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/dgaida/PyADM1ODE_calibration"
Repository = "https://github.com/dgaida/PyADM1ODE_calibration"
Documentation = "https://github.com/dgaida/PyADM1ODE_calibration#readme"
"Bug Tracker" = "https://github.com/dgaida/PyADM1ODE_calibration/issues"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.package-data]
pyadm1ode_calibration = ["py.typed"]

[tool.black]
line-length = 127
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 127
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = "pyadm1ode.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--doctest-modules",
    "--doctest-glob=*.md",
    "--strict-markers",
    "--cov=pyadm1ode_calibration",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["pyadm1ode_calibration"]
omit = [
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = true
fail-under = 95
exclude = ["setup.py", "docs", "build", "tests"]
ignore-regex = ["^__repr__$", "^__str__$", "^__len__$"]
verbose = 2
color = true
